# trafficScore

./: CMakeLists.txt  README.md  main.cpp  test.cpp
ScoreCalculator/: SimpleCalculator.cpp  SimpleCalculator.h
gdbGenerator/: BaseGenerator.cpp  BaseGenerator.h  OracleGenerator.cpp  OracleGenerator.h  PgGenerator.cpp  PgGenerator.h
modelCreator/: SimpleModel.cpp  SimpleModel.h
scoreCalculator/: IScore.h
tools/: CommonTools.cpp  CommonTools.h  DataBaseTools.cpp  DataBaseTools.h  GdbTools.cpp  GdbTools.h  MyLogger.h  MyMacros.h  ThreadPool.h
